name:                haddocset
version:             0.1.0
synopsis:            Generate docset of Dash by Haddock haskell documentation tool
description:         please read README.md <https://github.com/philopon/haddocset/blob/master/README.md>
license:             BSD3
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/haddocset
Bug-reports:         https://github.com/philopon/haddocset/issues
copyright:           (c) 2014 Hirotomo Moriwaki
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

executable haddocset
  main-is:             Main.hs
  other-modules:       Documentation.Haddocset
  ghc-options:         -Wall -O2
  build-depends:       base                 >=4.6 && <4.8
                     , ghc                  >=7.4
                     , optparse-applicative >=0.7
                     , conduit              >=1.0
                     , filesystem-conduit   >=1.0
                     , tagsoup              >=0.13
                     , Cabal                >=1.16
                     , text                 >=1.0
                     , sqlite-simple        >=0.4.5
                     , process              >=1.1
                     , system-filepath      >=0.4
                     , system-fileio        >=0.3
                     , transformers         >=0.3
  if impl(ghc >= 7.8)
    build-depends:     haddock              >=2.14
  else
    build-depends:     haddock              >=2.13 && <2.14

  default-language:    Haskell2010
