name:                haddocset
version:             0.4.2
synopsis:            Generate docset of Dash by Haddock haskell documentation tool
description:         please read README.md <https://github.com/philopon/haddocset/blob/master/README.md>
license:             BSD3
license-file:        LICENSE
author:              HirotomoMoriwaki<philopon.dependence@gmail.com>
maintainer:          HirotomoMoriwaki<philopon.dependence@gmail.com>
Homepage:            https://github.com/philopon/haddocset
Bug-reports:         https://github.com/philopon/haddocset/issues
copyright:           (c) 2014-2016 Hirotomo Moriwaki
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

executable haddocset
  main-is:             Main.hs
  other-modules:
      Documentation.Haddocset
      Documentation.Haddocset.Index
      Documentation.Haddocset.Plist
  ghc-options:         -Wall -O2
  build-depends:       base                 >=4.6   && <4.10
                     , ghc                  >=7.4   && <8.1
                     , optparse-applicative >=0.11  && <0.13
                     , conduit              >=1.0   && <1.3
                     , conduit-extra        >=1.1   && <1.2
                     , tagsoup              >=0.13  && <1.4
                     , Cabal                >=1.16  && <1.25
                     , text                 >=1.0   && <1.3
                     , sqlite-simple        >=0.4.5 && <0.5
                     , process              >=1.1   && <1.5
                     , directory            >=1.1   && <1.3
                     , filepath             >=1.3   && <1.5
                     , transformers         >=0.3   && <0.6
                     , exceptions           >=0.6   && <0.9
                     , resourcet            >=1.1   && <1.2
                     , mtl                  >=2.0   && <2.4
                     , http-types           >=0.8   && <0.10
  if impl(ghc >= 7.8)
    build-depends:     haddock-api          >=2.15
  else
    build-depends:     haddock              >=2.13 && <2.14

  default-language:    Haskell2010
